# lib-salmon

./: Cargo.toml  LOGGER.md  README.md
C++/: SalmonUtils.hpp
Rust/: Cargo.toml
Rust/src/: lib.rs
src/: diff.rs  fs.rs  lib.rs  logger.rs
