[package]
name = "salmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
logger = ["dep:chrono"]
diff = []
fs = []
all = ["logger", "diff", "fs"]

[dependencies]
chrono = { version = "*", optional = true }